[package]
name = "morph_mre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 'z'
lto = true

[dependencies.bevy]
version = "0.11"
default-features = false
features = [
    # These are the default features:
    "animation", # Animation support
    "bevy_asset", # Provides asset functionality
#    "bevy_audio", # Builtin audio | DISABLED because bevy_kira_audio
#    "bevy_gilrs", # Gamepad input support
    "bevy_scene", # Provides scene functionality
    "bevy_winit", # Window management
    "bevy_core_pipeline", # Higher-level rendering abstractions
    "bevy_pbr", # 3D (physically-based) rendering
    "bevy_gltf", # GLTF 3D assets format support
    "bevy_render", # Rendering framework core
    "bevy_sprite", # 2D (sprites) rendering
    "bevy_text", # Text/font rendering
    "bevy_ui", # UI toolkit
    "multi-threaded", # Enables multithreaded parallelism in the engine.
    "png", # PNG image format support
    "hdr", # HDR image format support
    "ktx2", # KTX2 compressed texture support
    "zstd", # For KTX2 supercompression
#    "vorbis", # OGG/VORBIS audio format support | DISABLED because bevy_kira_audio
    "x11", # X11 display server support
    "filesystem_watcher", # Enable watching file system for asset hot reload
    "bevy_gizmos", # Adds support for rendering gizmos
#    "android_shared_stdcxx", # Enable using a shared stdlib for cxx on Android
    "tonemapping_luts", # Include tonemapping Look Up Tables KTX2 files
    "default_font", # Include a default font, containing only ASCII characters
    "webgl2", # Enable some limitations to be able to use WebGL2. If not enabled, it will default to WebGPU in Wasm
]
